немного поработал над секцией заявок

--- a/index.html
+++ b/index.html
@@ -1,49 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <header>
         <div class="header-wrapper">
-          <a href="#"><img src="./image/logo.png" alt="Логотип"></a> 
+            <a href="#"><img src="./image/logo.png" alt="Логотип"></a>
             <div class="contacts">
                 <div class="contacts-block">
                     <img src="./image/metro.png" alt="метро и карта">
                     <a class="phone">+7 (926) 863-75-25</a>
                 </div>
-              <a href="https://wa.me/?text=%D0%97%D0%B4%D1%80%D0%B0%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%2C%20%D0%BC%D0%B5%D0%BD%D1%8F%20%D0%B8%D0%BD%D1%82%D0%B5%D1%80%D0%B5%D1%81%D1%83%D0%B5%D1%82%20%D0%BF%D0%B5%D1%87%D0%B0%D1%82%D1%8C."><img class="whatsApp" src="./image/whatsApp.png" alt="whatsApp"></a>  
+                <a
+                    href="https://wa.me/?text=%D0%97%D0%B4%D1%80%D0%B0%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%2C%20%D0%BC%D0%B5%D0%BD%D1%8F%20%D0%B8%D0%BD%D1%82%D0%B5%D1%80%D0%B5%D1%81%D1%83%D0%B5%D1%82%20%D0%BF%D0%B5%D1%87%D0%B0%D1%82%D1%8C."><img
+                        class="whatsApp" src="./image/whatsApp.png" alt="whatsApp"></a>
             </div>
         </div>
         <nav>
-                <a href="#">ЦЕНЫ</a>
-                <a href="#">СДЕЛАТЬ ЗАКАЗ</a>
-                <a href="#">ДОСТАВКА</a>
-                <a href="#">КОНТАКТЫ</a>
-                <a href="#">ОПТОВАЯ ПРОДАЖА</a>
+            <a href="#">ЦЕНЫ</a>
+            <a href="#">СДЕЛАТЬ ЗАКАЗ</a>
+            <a href="#">ДОСТАВКА</a>
+            <a href="#">КОНТАКТЫ</a>
+            <a href="#">ОПТОВАЯ ПРОДАЖА</a>
         </nav>
     </header>
-    
+
     <section class="form">
-         <form class="request">
+        <form class="request">
             <div class="h1">Быстрая заявка</div>
-            <label for="phone">Номер телефона:</label>
-            <input type="text" id="phone" placeholder="8 (ХХХ) ХХХ-ХХ-ХХ">
-            <input type="submit" value="Перезвоните мне!">
-         </form>
+            <div class="input-wrapper">
+                <label for="phone">Номер телефона:</label>
+                <input type="text" id="phone" placeholder="8 (ХХХ) ХХХ-ХХ-ХХ">
+            </div>
+            <input class="button" type="submit" value="Перезвоните мне!">
+        </form>
 
 
-         <div class="block-info">
-            <div class="item-info"><img src="./image/icon1.png" alt="Иконка"><h3>Заказ печатей 
-                от 290р</h3></div>
-            <div class="item-info"><img src="./image/icon2.png" alt="Иконка"><h3>Изготовление
-                за 1 час</h3></div>
-            <div class="item-info"><img src="./image/icon3.png" alt="Иконка"><h3>Оперативная доставка 
-                по Москве</h3></div>
-         </div>
+        <div class="block-info">
+            <div class="item-info"><img src="./image/icon1.png" alt="Иконка">
+                <h3>Заказ печатей
+                    от 290р</h3>
+            </div>
+            <div class="item-info"><img src="./image/icon2.png" alt="Иконка">
+                <h3>Изготовление
+                    за 1 час</h3>
+            </div>
+            <div class="item-info"><img src="./image/icon3.png" alt="Иконка">
+                <h3>Оперативная доставка
+                    по Москве</h3>
+            </div>
+        </div>
     </section>
 </body>
+
 </html>
