доделал блок с заявками и сделал блок с ценами

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     </header>
 
     <section class="form">
+
         <form class="request">
+            <img class="bg-circle" src="./image/circle.png" alt="фон">
             <div class="h1">Быстрая заявка</div>
             <div class="input-wrapper">
                 <label for="phone">Номер телефона:</label>
@@ -43,6 +45,8 @@
 
 
         <div class="block-info">
+            <img class="printing1" src="./image/printing1.png" alt="">
+            <img class="printing2" src="./image/printing2.png" alt="">
             <div class="item-info"><img src="./image/icon1.png" alt="Иконка">
                 <h3>Заказ печатей
                     от 290р</h3>
@@ -54,6 +58,84 @@
             <div class="item-info"><img src="./image/icon3.png" alt="Иконка">
                 <h3>Оперативная доставка
                     по Москве</h3>
+            </div>
+        </div>
+    </section>
+
+    <section class="price-container">
+        <div class="title">ЦЕНЫ</div>
+        <div class="card">
+            <div class="line-center"></div><!-- линия в центре -->
+            <div class="left-column">
+                <div class="card-title">
+                    <img src="./image/seal.png" alt="">
+                    <h1>ПЕЧАТИ</h1>
+                    <div class="time"><img src="./image/icon-time.png" alt=""><span>1 день</span></div>
+                </div>
+                <div class="prices">
+                    <div class="price">НОВАЯ ПЕЧАТЬ <span class="line">____________</span>
+                        <span class="price-text">290₽</span>
+                    </div>
+                    <div class="price">ПЕЧАТЬ ПО ОТТИСКУ<span class="line">_____</span>
+                        <span class="price-text">390₽</span>
+                    </div>
+                    <div class="price">ФАКСИМИЛЕ<span class="line">_________________</span>
+                        <span class="price-text">от 590₽</span>
+                    </div>
+                </div>
+            </div>
+            <div class="right-column">
+                <div class="card-title">
+                    <div class="time"><img src="./image/icon-time.png" alt=""><span>1-2 часа</span></div>
+                </div>
+                <div class="prices">
+                    <div class="price">НОВАЯ ПЕЧАТЬ<span class="line">_____________</span><span
+                            class="price-text">500₽</span>
+                    </div>
+                    <div class="price">ПЕЧАТЬ ПО ОТТИСКУ<span class="line">__________</span>
+                        <span class="price-text">от 790₽</span>
+                    </div>
+                    <div class="price">ФАКСИМИЛЕ<span class="line">__________________</span>
+                        <span class="price-text">от 950₽</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="line-center"></div><!-- линия в центре -->
+            <div class="left-column">
+                <div class="card-title">
+                    <img src="./image/seal1.png" alt="">
+                    <h1>ШТАМПЫ</h1>
+                    <div class="time"><img src="./image/icon-time.png" alt=""><span>1 день</span></div>
+                </div>
+                <div class="prices">
+                    <div class="price">20х40 мм<span class="line">____________</span>
+                        <span class="price-text">290₽</span>
+                    </div>
+                    <div class="price">30х50 мм<span class="line">____________</span>
+                        <span class="price-text">400₽</span>
+                    </div>
+                    <div class="price">60х100 мм<span class="line">______________</span>
+                        <span class="price-text">от 600₽</span>
+                    </div>
+                </div>
+            </div>
+            <div class="right-column">
+                <div class="card-title">
+                    <div class="time"><img src="./image/icon-time.png" alt=""><span>1-2 часа</span></div>
+                </div>
+                <div class="prices">
+                    <div class="price">20х40 мм<span class="line">________________</span>
+                        <span class="price-text">500₽</span>
+                    </div>
+                    <div class="price">30х50 мм<span class="line">________________</span>
+                        <span class="price-text"> 790₽</span>
+                    </div>
+                    <div class="price">60х100 мм<span class="line">_________________</span>
+                        <span class="price-text">1200₽</span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
