долелал мелкие косяки, добавил новых и сверстал блок с популярными товарами

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <section class="price-container">
         <div class="title">ЦЕНЫ</div>
         <div class="card">
-            <div class="line-center"></div><!-- линия в центре -->
+            <div class="line-center"></div>
             <div class="left-column">
                 <div class="card-title">
                     <img src="./image/seal.png" alt="">
@@ -102,7 +102,7 @@
             </div>
         </div>
         <div class="card">
-            <div class="line-center"></div><!-- линия в центре -->
+            <div class="line-center"></div>
             <div class="left-column">
                 <div class="card-title">
                     <img src="./image/seal1.png" alt="">
@@ -139,6 +139,38 @@
             </div>
         </div>
     </section>
+
+    <section class="popular-goods">
+        <img class="seal-bg" src="./image/seal-background.png" alt="">
+        <div class="title">ПОПУЛЯРНЫЕ ТОВАРЫ</div>
+        <div class="card-good one">
+            <div class="title-card">Карманная печать</div>
+            <div class="subtitle">
+                550р/ новая
+                <br>
+                750р/ по оттиску
+            </div>
+        </div>
+        <div class="card-good two">
+            <div class="title-card">Автоматическая
+                печать</div>
+            <div class="subtitle">
+                550р/ новая
+                <br>
+                750р/ по оттиску
+            </div>
+        </div>
+        <div class="card-good three">
+            <div class="title-card">Карманная
+                печать</div>
+            <div class="subtitle">
+                550р/ новая
+                <br>
+                750р/ по оттиску
+            </div>
+        </div>
+    </section>
+    <section>dfg</section>
 </body>
 
 </html>
