Сделал огромный блок с оформлением заказа, осталось футер и баги исрпавить

--- a/index.html
+++ b/index.html
@@ -170,7 +170,305 @@
             </div>
         </div>
     </section>
-    <section>dfg</section>
+
+    <section class="order-form">
+        <div class="title-order-form">ОНЛАЙН-ЗАКАЗ</div>
+        <div class="placing-an-order">
+
+            <div class="your-order">
+                <div class="title">Ваш заказ:</div>
+                <h3>Новая печать <br>
+                    Оснастка: ручная <br>
+                </h3>
+                <div class="count">Кол-во:
+                    <a href="#">
+                        <img src="./image/minus.svg" alt=""></a>
+                    <span>1</span>
+                    <a href="#"><img src="./image/plus.svg" alt=""></a>
+                </div>
+                <div class="total-price">
+                    <h2>Итого:</h2>
+                    <h3>390₽</h3>
+                </div>
+
+
+
+            </div>
+
+            <div class="ordering-block">
+                <div class="selecting-the-type-of-printing">
+                    <div class="title">Выберите вид печати</div>
+                    <div class="cards">
+                        <div class="card">
+                            <img src="./image/seal-img.png" alt="печать" draggable="false">
+                            <label>
+                                <input class="checkbox" type="checkbox" id="checkbox" />
+                                <span class="checkbox-circle"></span>
+                                Печать
+                            </label>
+                        </div>
+                        <div class="card">
+                            <img src="./image/stamp-image.png" alt="печать" draggable="false">
+                            <label>
+                                <input class="checkbox" type="checkbox" id="checkbox" />
+                                <span class="checkbox-circle"></span>
+                                Штамп
+                            </label>
+                        </div>
+                        <div class="card">
+                            <img src="./image/Facsimile-image.png" alt="печать" width="170" draggable="false">
+                            <label>
+                                <input class="checkbox" type="checkbox" id="checkbox" />
+                                <span class="checkbox-circle"></span>
+                                Факсимиле
+                            </label>
+                        </div>
+                    </div>
+
+                </div>
+                <!-- блок где можно указать детали заказа -->
+                <div class="order-details">
+                    <div class="title">Выберите тип</div>
+                    <div class="cards">
+                        <div class="card">
+                            <img class="seal-png" src="./image/seal21.png" alt="печать" draggable="false">
+                            <label>
+                                <input class="checkbox" type="checkbox" id="checkbox" />
+                                <span class="checkbox-circle"></span>
+                                Новая печать
+                            </label>
+                            <a class="question" href="#"><img src="./image/question.png" alt="есть вопросы?"></a>
+                        </div>
+                        <div class="card">
+                            <img class="seal-png" src="./image/seal22.png" alt="печать" draggable="false">
+                            <label>
+                                <input class="checkbox" type="checkbox" id="checkbox" />
+                                <span class="checkbox-circle"></span>
+                                По оттиску
+                            </label>
+                            <a class="question" href="#"><img src="./image/question.png" alt="есть вопросы?"></a>
+
+                        </div>
+                    </div>
+                    <div class="title">Срок изготовления</div>
+                    <div class="container">
+                        <label>
+                            <input class="checkbox" type="checkbox" id="checkbox" />
+                            <span class="checkbox-circle"></span>
+                            На завтра
+                        </label>
+                        <label>
+                            <input class="checkbox" type="checkbox" id="checkbox" />
+                            <span class="checkbox-circle"></span>
+                            Срочно <span>(1-2часа)</span>
+                        </label>
+                    </div>
+                    <div class="title">Количество </div>
+                    <div class="count-block">
+                        <a href="#">-</a>
+                        <h2>1</h2><a href="#">+</a>
+                    </div>
+                    <div class="title">Тип организации</div>
+                    <div class="container">
+                        <label>
+                            <input class="checkbox" type="checkbox" id="checkbox" />
+                            <span class="checkbox-circle"></span>
+                            ИП
+                        </label>
+                        <label>
+                            <input class="checkbox" type="checkbox" id="checkbox" />
+                            <span class="checkbox-circle"></span>
+                            ООО
+                        </label>
+                        <label>
+                            <input class="checkbox" type="checkbox" id="checkbox" />
+                            <span class="checkbox-circle"></span>
+                            ЗАО
+                        </label>
+                        <label>
+                            <input class="checkbox" type="checkbox" id="checkbox" />
+                            <span class="checkbox-circle"></span>
+                            ОАО
+                        </label>
+                        <label>
+                            <input class="checkbox" type="checkbox" id="checkbox" />
+                            <span class="checkbox-circle"></span>
+                            Врачебная
+                        </label>
+                        <label>
+                            <input class="checkbox" type="checkbox" id="checkbox" />
+                            <span class="checkbox-circle"></span>
+                            Другое
+                        </label>
+                    </div>
+                    <div class="container-inputs">
+                        <label>
+                            <div class="title">Наименование организации</div>
+                            <input class="one" type="text" placeholder="Например, ИП Константин Константинопольский">
+                        </label>
+                        <label>
+                            <div class="title">Город</div>
+                            <input class="two" type="text" placeholder="Москва">
+                        </label>
+                    </div>
+                    <div class="container-inputs">
+                        <label>
+                            <div class="title">ОГРН</div>
+                            <input class="three" type="text" placeholder="123456789876543">
+                        </label>
+                        <label>
+                            <div class="title">ИНН</div>
+                            <input class="three" type="text" placeholder="12345678986765">
+                        </label>
+                    </div>
+                    <div class="title">Выберите макет</div>
+
+                    <div class="cards">
+                        <div class="card">
+                            <img src="./image/seal31.png" alt="печать" draggable="false">
+                            <label>
+                                <input class="checkbox" type="checkbox" id="checkbox" />
+                                <span class="checkbox-circle"></span>
+                                ИП 0001 </label>
+                        </div>
+                        <div class="card">
+                            <img src="./image/seal32.png" alt="печать" draggable="false">
+                            <label>
+                                <input class="checkbox" type="checkbox" id="checkbox" />
+                                <span class="checkbox-circle"></span>
+                                ИП 0002 </label>
+                        </div>
+                        <div class="card">
+                            <img src="./image/seal33.png" alt="печать" width="170" draggable="false">
+                            <label>
+                                <input class="checkbox" type="checkbox" id="checkbox" />
+                                <span class="checkbox-circle"></span>
+                                ИП 0003
+                            </label>
+                        </div>
+                        <div class="card">
+                            <img src="./image/seal34.png" alt="печать" draggable="false">
+                            <label>
+                                <input class="checkbox" type="checkbox" id="checkbox" />
+                                <span class="checkbox-circle"></span>
+                                ИП 0004 </label>
+                        </div>
+                        <div class="card">
+                            <img src="./image/seal35.png" alt="печать" draggable="false">
+                            <label>
+                                <input class="checkbox" type="checkbox" id="checkbox" />
+                                <span class="checkbox-circle"></span>
+                                ИП 0005 </label>
+                        </div>
+                        <div class="card">
+                            <img src="./image/seal36.png" alt="печать" width="170" draggable="false">
+                            <label>
+                                <input class="checkbox" type="checkbox" id="checkbox" />
+                                <span class="checkbox-circle"></span>
+                                ИП 0006
+                            </label>
+                        </div>
+                        <div class="card">
+                            <img src="./image/seal37.png" alt="печать" draggable="false">
+                            <label>
+                                <input class="checkbox" type="checkbox" id="checkbox" />
+                                <span class="checkbox-circle"></span>
+                                ИП 0007 </label>
+                        </div>
+                        <div class="card">
+                            <img src="./image/seal38.png" alt="печать" draggable="false">
+                            <label>
+                                <input class="checkbox" type="checkbox" id="checkbox" />
+                                <span class="checkbox-circle"></span>
+                                ИП 0008 </label>
+                        </div>
+                        <div class="card">
+                            <img src="./image/seal39.png" alt="печать" width="170" draggable="false">
+                            <label>
+                                <input class="checkbox" type="checkbox" id="checkbox" />
+                                <span class="checkbox-circle"></span>
+                                ИП 0009
+                            </label>
+                        </div>
+                    </div>
+                    <div class="title">Выберите оснастку</div>
+                    <div class="cards">
+                        <div class="card">
+                            <img src="./image/seal41.png" alt="печать" draggable="false">
+                            <label>
+                                <input class="checkbox" type="checkbox" id="checkbox" />
+                                <span class="checkbox-circle"></span>
+                                Ручная </label>
+                        </div>
+                        <div class="card">
+                            <img src="./image/seal41.png" alt="печать" draggable="false">
+                            <label>
+                                <input class="checkbox" type="checkbox" id="checkbox" />
+                                <span class="checkbox-circle"></span>
+                                Ручная </label>
+                        </div>
+                        <div class="card">
+                            <img src="./image/seal41.png" alt="печать" draggable="false">
+                            <label>
+                                <input class="checkbox" type="checkbox" id="checkbox" />
+                                <span class="checkbox-circle"></span>
+                                Ручная </label>
+                        </div>
+                        <div class="card">
+                            <img src="./image/seal41.png" alt="печать" draggable="false">
+                            <label>
+                                <input class="checkbox" type="checkbox" id="checkbox" />
+                                <span class="checkbox-circle"></span>
+                                Ручная </label>
+                        </div>
+                        <div class="card">
+                            <img src="./image/seal41.png" alt="печать" draggable="false">
+                            <label>
+                                <input class="checkbox" type="checkbox" id="checkbox" />
+                                <span class="checkbox-circle"></span>
+                                Ручная </label>
+                        </div>
+
+                    </div>
+                    <div class="title">Способ получения</div>
+                    <div class="container">
+                        <label>
+                            <input class="checkbox" type="checkbox" id="checkbox" />
+                            <span class="checkbox-circle"></span>
+                            Самовывоз
+                        </label>
+                        <label>
+                            <input class="checkbox" type="checkbox" id="checkbox" />
+                            <span class="checkbox-circle"></span>
+                            Доставка
+                        </label>
+                    </div>
+                    <div class="title">Адрес доставки</div>
+                    <div class="container-inputs">
+                        <label>
+                            <input class="one" type="text" placeholder="Например, Панкратьевский переулок 41к1">
+                        </label>
+                    </div>
+                    <div class="title">Коментарии</div>
+                    <div class="container-inputs">
+                        <label>
+                            <textarea class="four" type="text"
+                                placeholder="Если у вас есть уточнение к заказу, либо дополнительный заказ, напишите его сюда."></textarea>
+                        </label>
+                    </div>
+                    <div class="button-wrapper">
+                        <a href="#" class="button">Оформить заказ</a>
+                        <h1>Оплата производится при получении заказа.</h1>
+                    </div>
+                </div>
+            </div>
+
+
+
+        </div>
+
+
+    </section>
 </body>
 
 </html>
