доделал подвал и в общем закончил

--- a/index.html
+++ b/index.html
@@ -469,6 +469,18 @@
 
 
     </section>
+    <footer>
+        <img src="./image/footer-logo.png" alt="" class="logo" draggable="false">
+        <nav>
+            <a href="#">ЦЕНЫ</a>
+            <a href="#">СДЕЛАТЬ ЗАКАЗ</a>
+            <a href="#">ДОСТАВКА</a>
+            <a href="#">КОНТАКТЫ </a>
+            <a href="#">ОПТОВАЯ ПРОДАЖА</a>
+        </nav>
+
+    </footer>
+
 </body>
 
 </html>
